[package]
name = "atomicbox_nostd"
edition = "2018"
description = "Fork of the atomicbox library that works in no_std contexts"
version = "0.3.0"
authors = ["Jason Orendorff <jason.orendorff@gmail.com>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomaka/atomicbox"

[dependencies]

[badges]
travis-ci = { repository = "jorendorff/atomicbox" }
